# NTT-learning

./: .gitignore  AGENT_CONTEXT.md  README.md  pyproject.toml
notebooks/: COURSE_BLUEPRINT.ipynb  COURSE_COMPLETE.ipynb  START_HERE.ipynb
notebooks/butterfly_mechanics/03_fast_forward_ct/: lab.ipynb  lecture.ipynb  problems.ipynb  studio.ipynb
notebooks/butterfly_mechanics/04_fast_inverse_gs/: lab.ipynb  lecture.ipynb  problems.ipynb  studio.ipynb
notebooks/foundations/01_convolution_to_toy_ntt/: lab.ipynb  lecture.ipynb  problems.ipynb  studio.ipynb
notebooks/foundations/02_negative_wrapped_ntt/: lab.ipynb  lecture.ipynb  problems.ipynb  studio.ipynb
notebooks/kyber_mapping/05_kyber_ntt_and_base_multiplication/: lab.ipynb  lecture.ipynb  problems.ipynb  studio.ipynb
notebooks/professional/06_debugging_ntt_failures/: lab.ipynb  lecture.ipynb  problems.ipynb  studio.ipynb
ntt_learning/: __init__.py  course.py  toy_ntt.py  visuals.py
scripts/: app.sh  bootstrap.sh  common.sh  reset-state.sh  restart.sh  start.sh  status.sh  stop.sh  validate.sh
tests/: __init__.py  test_course_contract.py  test_notebook_execution.py  test_repo_ops.py  test_toy_ntt.py  test_visuals.py
tools/: render_notebooks.py
