[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntt-learning"
version = "0.1.0"
description = "Local-first notebooks for learning the Number Theoretic Transform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyterlab>=4.2,<5",
  "ipywidgets>=8.1,<9",
  "matplotlib>=3.9,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.setuptools]
packages = ["ntt_learning"]

